<resources>
    <string name="app_name">RRQ Store</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="required_money">IDR %d</string>
    <string name="minus">—</string>
    <string name="plus">＋</string>
    <string name="add_to_cart">ADD TO CART : IDR %d</string>
    <string name="total_order">Total Order : IDR %d</string>
    <string name="back">Back</string>
    <string name="title_share">RRQ Store Here!</string>
    <string name="share_message">Hey, I have buy %1$d merch in RRQ Store with total IDR %2$d. Do you want this merch? Available now at https://store.teamrrq.com/ Check This Out! </string>
    <string name="cart_empty">Your Cart Is Empty, Please Add Merchandise First.</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="search_merch">Search Products Here..</string>
    <string name="not_found">No Products Found!</string>
    <string name="name">Husni Sabar</string>
    <string name="email">husnisabar592@gmail.com</string>
</resources>